...
    <string name="toast_habit_unarchived">Habits unarchived</string>
    <string name="title_activity_show_habit" translatable="false"/>
    <string name="overview">Overview</string>
    <string name="habit_strength">Habit strength</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="times_every">times in</string>
    <string name="days">days</string>
    <string name="reminder">Reminder</string>
    <string name="save">Save</string>
    <string name="streaks">Streaks</string>
    <string name="no_habits_found">You have no active habits</string>
    <string name="long_press_to_toggle">Press-and-hold to check or uncheck</string>
    <string name="reminder_off">Off</string>
    <string name="create_habit">Create habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="check">Check</string>
    <string name="snooze">Later</string>
    <string name="intro_title_1">Welcome</string>
    <string name="intro_description_1">Loop Habit Tracker helps you create and maintain good habits.</string>
    <string name="intro_title_2">Create some new habits</string>
    <string name="intro_description_2">Every day, after performing your habit, put a checkmark on the app.</string>
    <string name="intro_title_4">Track your progress</string>
    <string name="intro_description_4">Detailed graphs show you how your habits improved over time.</string>
    <string name="interval_15_minutes">15 minutes</string>
    <string name="interval_30_minutes">30 minutes</string>
    <string name="interval_1_hour">1 hour</string>
    <string name="interval_2_hour">2 hours</string>
...
    <string name="pref_toggle_description">Put checkmarks with a single tap instead of press-and-hold. More convenient, but might cause accidental toggles.</string>
    <string name="pref_snooze_interval_title">Snooze interval on reminders</string>
    <string name="pref_rate_this_app">Rate this app on Google Play</string>
    <string name="pref_send_feedback">Send feedback to developer</string>
    <string name="pref_view_source_code">View source code at GitHub</string>
    <string name="links">Links</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="snooze_interval">Snooze interval</string>
    <string name="select_snooze_delay">Select snooze delay</string>
    <string name="hint_title">Did you know?</string>
    <string name="hint_drag">To rearrange the entries, press-and-hold on the name of the habit, then drag it to the correct place.</string>
    <string name="hint_landscape">You can see more days by putting your phone in landscape mode.</string>
    <string name="delete_habits">Delete Habits</string>
    <string name="delete_habits_message">The habits will be permanently deleted. This action cannot be undone.</string>
    <string name="habit_not_found">Habit deleted / not found</string>
    <string name="weekends">Weekends</string>
    <string name="any_weekday">Monday to Friday</string>
    <string name="any_day">Any day of the week</string>
    <string name="select_weekdays">Select days</string>
    <string name="export_to_csv">Export as CSV</string>
    <string name="done_label">Done</string>
    <string name="clear_label">Clear</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
...
        <item>@string/hint_landscape</item>
    </string-array>
    <string name="about">About</string>
    <string name="translators">Translators</string>
    <string name="developers">Developers</string>
    <string name="version_n">Version %s</string>
    <string name="frequency">Frequency</string>
    <string name="checkmark">Checkmark</string>
    <string name="checkmark_stack_widget" formatted="false">Checkmark Stack Widget</string>
    <string name="frequency_stack_widget" formatted="false">Frequency Stack Widget</string>
    <string name="score_stack_widget" formatted="false">Score Stack Widget</string>
    <string name="history_stack_widget" formatted="false">History Stack Widget</string>
    <string name="streaks_stack_widget" formatted="false">Streaks Stack Widget</string>
...
    <string name="export">Export</string>
    <string name="long_press_to_edit">Press-and-hold to change the value</string>
    <string name="change_value">Change value</string>
    <string name="calendar">Calendar</string>
    <string name="unit">Unit</string>
    <string name="example_question_boolean">e.g. Did you exercise today?</string>
    <string name="question">Question</string>
    <string name="target">Target</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="customize_notification_summary">Change sound, vibration, light and other notification settings</string>
    <string name="customize_notification">Customize notifications</string>
    <string name="pref_view_privacy">View privacy policy</string>
    <string name="view_all_contributors">View all contributors…</string>
    <string name="database">Database</string>
    <string name="widget_opacity_title">Widget opacity</string>
    <string name="widget_opacity_description">Makes widgets more transparent or more opaque in your home screen.</string>
    <string name="first_day_of_the_week">First day of the week</string>
    <string name="default_reminder_question">Have you completed this habit today?</string>
    <string name="notes">Notes</string>
    <string name="example_notes">(Optional)</string>
    <string name="yes_or_no_example">e.g. Did you wake up early today? Did you exercise? Did you play chess?</string>
    <string name="measurable">Measurable</string>
    <string name="measurable_example">e.g. How many miles did you run today? How many pages did you read? How many calories did you eat?</string>
    <string name="x_times_per_week">%d times per week</string>
    <string name="x_times_per_month">%d times per month</string>
    <string name="yes_or_no_short_example">e.g. Exercise</string>
    <string name="color">Color</string>
    <string name="example_target">e.g. 15</string>
    <string name="measurable_short_example">e.g. Run</string>
    <string name="measurable_question_example">e.g. How many miles did you run today?</string>
    <string name="measurable_units_example">e.g. miles</string>
    <string name="every_month">Every month</string>
    <string name="validation_cannot_be_blank">Cannot be blank</string>
...
