...

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="2dp"
            android:gravity="end"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/create_habit"
            app:titleTextColor="@color/white">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
...
                    android:layout_weight="1">
                    <LinearLayout style="@style/FormInnerBox">
                        <TextView
                            style="@style/FormLabel"
                            android:text="@string/name" />
                        <EditText
                            android:id="@+id/nameInput"
                            style="@style/FormInput"
                            android:maxLines="2"
                            android:maxLength="50"
                            android:inputType="textCapSentences|textMultiLine"
                            android:hint="@string/yes_or_no_short_example"
                            />
...
                    android:layout_height="match_parent">
                    <LinearLayout style="@style/FormInnerBox">
                        <TextView
                            style="@style/FormLabel"
                            android:text="@string/color" />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/colorButton"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="8dp"
...
            <FrameLayout style="@style/FormOuterBox">
                <LinearLayout style="@style/FormInnerBox">
                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/question" />
                    <EditText
                        android:id="@+id/questionInput"
                        style="@style/FormInput"
                        android:inputType="textCapSentences|textMultiLine"
                        android:hint="@string/example_question_boolean"
                         />
                </LinearLayout>
            </FrameLayout>
...
                <LinearLayout style="@style/FormInnerBox">
                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/frequency" />
                    <TextView
                        style="@style/FormDropdown"
                        android:id="@+id/boolean_frequency_picker"
                        android:text="@string/every_day" />
                </LinearLayout>
            </FrameLayout>

            <!-- Target value, unit and frequency -->
            <FrameLayout
...
                    <LinearLayout style="@style/FormInnerBox">
                        <TextView
                            style="@style/FormLabel"
                            android:text="@string/frequency" />
                        <TextView
                            style="@style/FormDropdown"
                            android:id="@+id/numericalFrequencyPicker"
                            android:text="@string/every_week"
                            android:textColor="?attr/contrast100"
                            />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
...
                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/reminder" />

                    <TextView
                        style="@style/FormDropdown"
                        android:id="@+id/reminderTimePicker"
                        android:text="@string/reminder_off" />

                    <View
                        style="@style/FormDivider"
                        android:id="@+id/reminderDivider"/>

                    <TextView
                        style="@style/FormDropdown"
                        android:id="@+id/reminderDatePicker"
                        android:text="" />
                </LinearLayout>
            </FrameLayout>


            <!-- Notes -->
...
                <LinearLayout style="@style/FormInnerBox">
                    <TextView
                        style="@style/FormLabel"
                        android:text="@string/notes" />

                    <EditText
                        android:id="@+id/notesInput"
                        style="@style/FormInput"
                        android:inputType="textCapSentences|textMultiLine"
                        android:hint="@string/example_notes" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
...
